2002-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_LANG_PROG_NO_CONFDEFS): Delete.
	(OCTAVE_CXX_PRAGMA_INTERFACE_IMPLEMENTATION): Delete.

2002-11-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for dlopen last, to avoid broken
	compatibility libraries.
	Default value for SHLLIB is '$(SHLEXT)', not $SHLEXT.

2002-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (USE_EXCEPTIONS_FOR_INTERRUPTS): No need to define.

2002-11-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for sigsetjmp and siglongjmp.
	(AH_BOTTOM): If both are found, define OCTAVE_HAVE_SIG_JUMP.
	Also check for sig_atomic_t, typedef it if not available.

2002-11-10  Per Persson <persquare@mac.com>

	* configure.in: Detect dyld API for dynamic linking on OS X.

2002-11-09  Per Persson <persquare@mac.com>

	* configure.in: Use $(TOPDIR)/src/octave, not $(bindir)/octave for
	-bundle-loader argument.	

	* aclocal.m4 (OCTAVE_CXX_PREPENDS_UNDERSCORE): Force result for OS X.

2002-11-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Set FPICFLAG, Also set CXXPICFLAG, CPICFLAG,
	FPICFLAG, and INCLUDE_LINK_DEPS for OS X.

	* acx_blas.m4 (LIBS): Also check for Apple vecLib framework.

2002-11-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AH_BOTTOM): Define USE_EXCEPTIONS_FOR_INTERRUPTS.

2002-11-04  Joseph P. Skudlarek  <jskud@jskud.com>

	* emacs/otags: handle declarations without arguments and/or return
	values.

2002-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (SHLEXT_VER, SHLLIB_VER, SHLBIN_VER): Use
	$(version), not $(VERSION).

2002-10-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (HAVE_DLOPEN_API, HAVE_SHL_LOAD_API,
	HAVE_LOADLIBRARY_API): Delete.
	(do-subst-config-vals): Don't substitute them here.

2002-10-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (ENABLE_DYNAMIC_LINKING): Rename from
	WITH_DYNAMIC_LINKING.
	* Makeconf.in: Likewise.
	* toplev.cc 