@@ -1,3 +1,9 @@
+2002-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* misc/quit.h (BEGIN_INTERRUPT_WITH_EXCEPTIONS,
+	END_INTERRUPT_WITH_EXCEPTIONS): Only define for C++ source.
+	Include <new> for C++ source.
+
 2002-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* misc/quit.h, misc/quit.cc [! USE_EXCEPTIONS_FOR_INTERRUPTS]):
